--- a/new/package.json
+++ b/new/package.json
@@ -24,6 +24,8 @@
     "@supabase/supabase-js": "^2.26.0",
     "@tailwindcss/forms": "^0.5.3",
     "flowbite": "^1.6.6",
-    "nuxt-icon": "^0.4.2"
+    "nuxt-aos": "^1.1.3",
+    "nuxt-icon": "^0.4.2",
+    "preline": "^1.9.0"
   }
 }
