--- a/new/package.json
+++ b/new/package.json
@@ -26,6 +26,7 @@
     "flowbite": "^1.6.6",
     "nuxt-aos": "^1.1.3",
     "nuxt-icon": "^0.4.2",
-    "preline": "^1.9.0"
+    "preline": "^1.9.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
