--- a/new/package.json
+++ b/new/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.14",
     "@heroicons/vue": "^2.0.18",
-    "@supabase/supabase-js": "^2.26.0",
+    "@supabase/supabase-js": "^2.38.4",
     "@tailwindcss/forms": "^0.5.3",
     "flowbite": "^1.6.6",
+    "moment": "^2.29.4",
     "nuxt-aos": "^1.1.3",
     "nuxt-icon": "^0.4.2",
     "preline": "^1.9.0",
