--- a/new/package.json
+++ b/new/package.json
@@ -28,6 +28,7 @@
     "nuxt-aos": "^1.1.3",
     "nuxt-icon": "^0.4.2",
     "preline": "^1.9.0",
+    "sniffr": "^1.3.1",
     "tailwindcss-animate": "^1.0.7"
   }
 }
